# dm-Octaver

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: build.yml  dm-octaver.mk
docker/modduo/: Dockerfile
docker/moddwarf/: Dockerfile
lv2/: Cargo.toml
lv2/dm-Octaver.lv2/: dm-Octaver.ttl  dm-Octaver_dsp.ttl  manifest.ttl  modgui.ttl
lv2/dm-Octaver.lv2/modgui/: stylesheet-dm-octaver.css
lv2/src/: lib.rs
octaver/: Cargo.toml
octaver/src/: dbtoa.rs  envelope_follower.rs  lib.rs  lowpass.rs  mix.rs  noise_gate.rs  one_pole_filter.rs  params.rs
octaver/src/envelope_follower/: slide.rs
octaver/src/noise_gate/: slide.rs
octaver/src/shared/: slide.rs
profiling/: Cargo.toml
profiling/benches/: octaver_bench.rs
profiling/src/: main.rs  utils.rs
scripts/: build-lv2-for-mod-desktop-mac.sh
src/: dbtoa.rs  lib.rs  octaver.rs
src/octaver/: clip.rs  delta.rs  lowpass.rs  noise_gate.rs  octaver.rs  slide.rs
