[package]
name = "dm_octaver"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

[dependencies]
lv2 = { git = "https://github.com/davemollen/rust-lv2.git", branch = "master", features = [
    "minimal_plugin",
] }
octaver = { path = "../octaver" }

[lib]
crate-type = ["cdylib"]
